--- a/Recruitment-iOS/Main.storyboard
+++ b/Recruitment-iOS/Main.storyboard
@@ -181,23 +181,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Loading..." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="PV4-Rb-rhK">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gag-7Q-zSC">
+                                <rect key="frame" x="20" y="44" width="374" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="PV4-Rb-rhK" firstAttribute="top" secondItem="gcf-1c-554" secondAttribute="top" id="9c4-GU-VPT"/>
-                            <constraint firstItem="PV4-Rb-rhK" firstAttribute="leading" secondItem="gcf-1c-554" secondAttribute="leading" id="GKH-P6-6gN"/>
-                            <constraint firstAttribute="trailing" secondItem="PV4-Rb-rhK" secondAttribute="trailing" id="R61-Gi-aPB"/>
-                            <constraint firstAttribute="bottom" secondItem="PV4-Rb-rhK" secondAttribute="bottom" id="ekr-Cd-Qmz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Gag-7Q-zSC" secondAttribute="trailing" id="cTe-v1-TyB"/>
+                            <constraint firstItem="Gag-7Q-zSC" firstAttribute="leading" secondItem="gcf-1c-554" secondAttribute="leadingMargin" id="gC2-sU-GGj"/>
+                            <constraint firstItem="Gag-7Q-zSC" firstAttribute="top" secondItem="Ljc-sq-qn6" secondAttribute="bottom" id="gKZ-ef-GHh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="GD7-FI-cbk"/>
                     <connections>
-                        <outlet property="textView" destination="PV4-Rb-rhK" id="hPl-As-wVl"/>
+                        <outlet property="textLabel" destination="Gag-7Q-zSC" id="enn-t7-2BI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OTd-D6-Fjm" userLabel="First Responder" sceneMemberID="firstResponder"/>
